# haskell

./: .gitignore  haskell.cabal  stack.yaml
app/: Main.hs  Main2.hs
src/: Nod.hs
test/: NodTest.hs
