name:                 haskell
version:              0.1.0.1
synopsis:
-- description:
-- license:
-- license-file:
homepage:
author:               maximus
maintainer:           faystmax@gmail.com
category:
-- copyright:
build-type:           Simple
-- extra-source-files:
cabal-version:        >=1.10

executable haskell
  main-is:              Main.hs
--  other-modules:        synchronous-channels
--   other-extensions: synchronous-channels
  build-depends:        base >= 4.7 && < 5
                      , haskell
                      , stm
                      , synchronous-channels
                      , distributed-process
                      , network-transport-tcp
                      , random
  hs-source-dirs:       app
  default-language:     Haskell2010


library
  exposed-modules:      Nod
  hs-source-dirs:       src
  build-depends:        base
  default-language:     Haskell2010

test-suite haskell-test
  type:                 exitcode-stdio-1.0
  main-is:              NodTest.hs
  hs-source-dirs:       test
  ghc-options:          -threaded -rtsopts -with-rtsopts=-N
  build-depends:        base
                      , tasty
                      , tasty-hunit
                      , haskell
  default-language: Haskell2010
